# DataMiningFinalProject

./: .gitignore  pyproject.toml  run.sh  test_submission_template.csv
src/: app.py  dataset.py  metrics.py  model.py  predict.py  train.py  transforms.py
