[project]
name = "insplad-classifier"
version = "0.1.0"
description = "UAV power-line component defect classifier (InsPLAD)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "timm>=1.0.11",
    "pillow>=10.4.0",
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "tqdm>=4.66.0",
    "streamlit>=1.40.0",
    "matplotlib>=3.9.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
